--- a/Droid/XamarinFormsSamples.Droid.csproj
+++ b/Droid/XamarinFormsSamples.Droid.csproj
@@ -26,7 +26,6 @@
     <DefineConstants>DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AndroidLinkMode>None</AndroidLinkMode>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -103,6 +102,15 @@
     <Reference Include="Xamarin.Forms.Xaml">
       <HintPath>..\packages\Xamarin.Forms.2.3.4.231\lib\MonoAndroid10\Xamarin.Forms.Xaml.dll</HintPath>
     </Reference>
+    <Reference Include="SignaturePad">
+      <HintPath>..\packages\Xamarin.Controls.SignaturePad.1.5.1\lib\MonoAndroid\SignaturePad.dll</HintPath>
+    </Reference>
+    <Reference Include="SignaturePad.Forms">
+      <HintPath>..\packages\Xamarin.Controls.SignaturePad.Forms.1.5.1\lib\MonoAndroid\SignaturePad.Forms.dll</HintPath>
+    </Reference>
+    <Reference Include="SignaturePad.Forms.Droid">
+      <HintPath>..\packages\Xamarin.Controls.SignaturePad.Forms.1.5.1\lib\MonoAndroid\SignaturePad.Forms.Droid.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\XamarinFormsSamples\XamarinFormsSamples.csproj">
@@ -129,6 +137,8 @@
     <AndroidResource Include="Resources\drawable-hdpi\icon.png" />
     <AndroidResource Include="Resources\drawable-xhdpi\icon.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\icon.png" />
+    <AndroidResource Include="Resources\drawable\button_cancel.png" />
+    <AndroidResource Include="Resources\drawable\button_done.png" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\Billy Ohio.otf" />
