--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -16,5 +16,7 @@
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.1.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="25.1.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Build.Download" version="0.4.2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Controls.SignaturePad" version="1.5.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.Controls.SignaturePad.Forms" version="1.5.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Forms" version="2.3.4.231" targetFramework="monoandroid71" />
 </packages>
