--- a/XamarinFormsSamples/packages.config
+++ b/XamarinFormsSamples/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Xamarin.Forms" version="2.3.4.224" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xamarin.Controls.SignaturePad.Forms" version="1.5.1" targetFramework="portable-net45+win80+wpa81" requireReinstallation="True" />
+  <package id="Xamarin.Forms" version="2.3.4.231" targetFramework="portable-net45+win80+wpa81" />
 </packages>
