--- a/iOS/XamarinFormsSamples.iOS.csproj
+++ b/iOS/XamarinFormsSamples.iOS.csproj
@@ -122,6 +122,8 @@
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Billy Ohio.ttf" />
+    <BundleResource Include="Resources\button_cancel.png" />
+    <BundleResource Include="Resources\button_done.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.3.4.224\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.3.4.224\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
